# lieme

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
lieme/: __init__.py  featurize.py  ml.py  mpfetch.py
lieme/io/: __init__.py  charges.py  dos.py
tests/: test_charges.py  test_dos.py  test_featurize.py  test_ml.py  test_mpfetch.py
tests/test_charges/test_1/: OUTCAR  with_charges.traj
tests/test_charges/test_2/: with_charges.traj
tests/test_charges/test_4/: POTCAR
tests/test_dos/test_1/: DOSCAR
tests/test_dos/test_2/: DOSCAR
tests/test_featurize/: Intercalation_data.txt
tests/test_featurize/LiCoO2/Bader_calculation/: with_charges.traj
tests/test_featurize/LiCoO2/Energy_calculation/: OUTCAR
tests/test_featurize/LiCoO2/Intercalation/3_Li/2/geo_opt/: OUTCAR
tests/test_featurize/LiCoO2/Intercalation/3_Li/4/geo_opt/: OUTCAR
tests/test_featurize/LiCoO2/Intercalation/6_Li/1/bader/: CONTCAR  DOSCAR  OUTCAR  vasp.out  with_charges.traj
tests/test_featurize/MoO2/Bader_calculation/: with_charges.traj
tests/test_featurize/MoO2/Energy_calculation/: OUTCAR
tests/test_featurize/TiO2-A/Energy_calculation/: OUTCAR
tests/test_ml/test_1/: Y_train.pkl  exp_data.xlsx  jobs.pkl  material_features_train.pkl  results.db  x_test.pkl  x_train.pkl
tests/test_ml/test_1/results/: results_0.pkl
tests/test_ml/test_4/: jobs.pkl
tests/test_ml/test_5/: X_train.pkl  results.db
tests/test_mpfetch/test_1/: material_features_test.pkl
tests/test_mpfetch/test_2/: material_features_test.pkl  material_features_train.pkl
(+13 files in other folders)
